# traversable_area_from_pt_clouds

./: CMakeLists.txt  README.md  map.yaml  package.xml
include/pcd_to_2d/: pcd_to_2d.h
launch/: pcd_to_2d.launch
src/: functions_used.py  old_code.cpp  pcd_to_2d.cpp  segment_road.py  test.cpp
