<?xml version="1.0"?>
<package format="2">
  <name>pcd_to_2d</name>
  <version>0.0.0</version>
  <description>The pcd_to_2d package</description>
  <maintainer email="otto-testing@todo.todo">otto-testing</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_pcl</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>grid_map_costmap_2d</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>grid_map_costmap_2d</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_pcl</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <export>
  </export>
</package>
